--- a/src/main/resources/templates/show-all-customers.html
+++ b/src/main/resources/templates/show-all-customers.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<table class="table table-bordered">F
-    <thead class="thead-light">
+<table >
+    <thead>
     <tr>
         <th>Customer ID</th>
         <th>Name</th>
